[package]
name = "curtana"
description = "Simplified zero-cost wrapper over llama.cpp powered by lama-cpp-2."
categories = [
    "api-bindings",
    "text-processing",
]
keywords = [
    "llama",
    "llm",
    "embedding",
    "inference",
]
readme = "../README.md"
version = "0.1.2"
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[package.metadata.release]
release = true

[package.metadata.docs.rs]
# Generate documentation with all features enabled
features = []

[features]

# Mutually-exclusive features which enable
# diferent CPU/GPU backends for the Llama APIs.
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
openmp = ["llama-cpp-2/openmp"]

[dependencies]
lazy_static = "1.5.0"

# LLM inference.
llama-cpp-2 = { version = "0.1.134", default-features = false, features = [] }
